--- a/index.html
+++ b/index.html
@@ -12,58 +12,58 @@
 
 
             <div id="neptune-orbit">
-                <a href="#"><img src="images/neptune.png" id="neptune"/></a>
+                <a href="neptune.html"><img src="images/neptune.png" id="neptune"/></a>
             </div>
             <div id="neptune-label" class="label-box">
-                <a href="#">NEPTUNE</a>
+                <a href="neptune.html">NEPTUNE</a>
             </div>
 
 
             <div id="uranus-orbit">
-                <a href="#"><img src="images/uranus.png" id="uranus"/></a>
+                <a href="uranus.html"><img src="images/uranus.png" id="uranus"/></a>
             </div>
             <div id="uranus-label" class="label-box">
-                <a href="#">URANUS</a>
+                <a href="uranus.html">URANUS</a>
             </div>
 
 
             <div id="saturn-orbit">
-                <a href="#"><img src="images/saturn.png" id="saturn"/></a>
+                <a href="saturn.html"><img src="images/saturn.png" id="saturn"/></a>
             </div>
             <div id="saturn-label" class="label-box">
-                <a href="#">SATURN</a>
+                <a href="saturn.html">SATURN</a>
             </div>
 
 
             <div id="jupiter-orbit">
-                <a href="#"><img src="images/jupiter.png" id="jupiter"/></a>
+                <a href="jupiter.html"><img src="images/jupiter.png" id="jupiter"/></a>
             </div>
             <div id="jupiter-label" class="label-box">
-                <a href="#">JUPITER</a>
+                <a href="jupiter.html">JUPITER</a>
             </div>
 
 
             <div id="mars-orbit">
-                <a href="#"><img src="images/mars.png" id="mars"/></a>
+                <a href="mars.html"><img src="images/mars.png" id="mars"/></a>
             </div>
             <div id="mars-label" class="label-box">
-                <a href="#">MARS</a>
+                <a href="mars.html">MARS</a>
             </div>
 
 
             <div id="earth-orbit">
-                <a href="#"><img src="images/earth.png" id="earth"/></a>
+                <a href="earth.html"><img src="images/earth.png" id="earth"/></a>
             </div>
             <div id="earth-label" class="label-box">
-                <a href="#">EARTH</a>
+                <a href="earth.html">EARTH</a>
             </div>
 
 
             <div id="venus-orbit">
-                <a href="#"><img src="images/venus.png" id="venus"/></a>
+                <a href="venus.html"><img src="images/venus.png" id="venus"/></a>
             </div>
             <div id="venus-label" class="label-box">
-                <a href="#">Venus</a>
+                <a href="venus.html">Venus</a>
             </div>
 
 
